--- a/languages/visual-portfolio.json
+++ b/languages/visual-portfolio.json
@@ -1352,10 +1352,25 @@
          "Upgrade to PRO Now": [
             ""
          ],
+         "Currently displaying all items": [
+            ""
+         ],
+         "Currently filtering by %1$s, %2$s items": [
+            ""
+         ],
+         "Display all items": [
+            ""
+         ],
+         "Filter by %1$s, %2$s items": [
+            ""
+         ],
+         "Category filter": [
+            ""
+         ],
          "Loading...": [
             ""
          ],
-         "You ve reached the end of the list": [
+         "Page %s": [
             ""
          ],
          "Author": [
@@ -1403,157 +1418,22 @@
          "Saved %s": [
             ""
          ],
-         "Add filter text…": [
+         "Add category text…": [
             ""
          ],
-         "Loading filters…": [
+         "Load more link": [
             ""
          ],
-         "Show Loading Text": [
+         "Show label text": [
             ""
          ],
-         "Loading Label": [
+         "Show arrow": [
             ""
          ],
-         "End of List Text": [
+         "Next page link": [
             ""
          ],
-         "Pagination will be displayed when the number of pages is more than 1.": [
-            ""
-         ],
-         "VP Pagination Infinite": [
-            ""
-         ],
-         "Displays infinite scroll pagination for Visual Portfolio loop.": [
-            ""
-         ],
-         "infinite": [
-            ""
-         ],
-         "scroll": [
-            ""
-         ],
-         "pagination": [
-            ""
-         ],
-         "vp": [
-            ""
-         ],
-         "VP Pagination Load More": [
-            ""
-         ],
-         "Displays load more button pagination for Visual Portfolio loop.": [
-            ""
-         ],
-         "load more": [
-            ""
-         ],
-         "Next Label": [
-            ""
-         ],
-         "VP Pagination Next": [
-            ""
-         ],
-         "Displays the next page link.": [
-            ""
-         ],
-         "next": [
-            ""
-         ],
-         "VP Pagination Numbers": [
-            ""
-         ],
-         "Displays page numbers for navigation.": [
-            ""
-         ],
-         "numbers": [
-            ""
-         ],
-         "Previous Label": [
-            ""
-         ],
-         "VP Pagination Previous": [
-            ""
-         ],
-         "Displays the previous page link.": [
-            ""
-         ],
-         "previous": [
-            ""
-         ],
-         "Paged Pagination": [
-            ""
-         ],
-         "Displays paged pagination for Visual Portfolio loop.": [
-            ""
-         ],
-         "pages": [
-            ""
-         ],
-         "Button Settings": [
-            ""
-         ],
-         "Sort Value": [
-            ""
-         ],
-         "Value used for sorting (e.g., date_asc, title_desc)": [
-            ""
-         ],
-         "Active": [
-            ""
-         ],
-         "Button Label": [
-            ""
-         ],
-         "Sort Button": [
-            ""
-         ],
-         "Individual button for sorting portfolio items.": [
-            ""
-         ],
-         "Date Asc": [
-            ""
-         ],
-         "Date Desc": [
-            ""
-         ],
-         "Add sorting options to your portfolio with buttons.": [
-            ""
-         ],
-         "sort": [
-            ""
-         ],
-         "order": [
-            ""
-         ],
-         "Title Asc": [
-            ""
-         ],
-         "Title Desc": [
-            ""
-         ],
-         "Date Ascending": [
-            ""
-         ],
-         "Date Descending": [
-            ""
-         ],
-         "Title Ascending": [
-            ""
-         ],
-         "Title Descending": [
-            ""
-         ],
-         "Switch to Buttons": [
-            ""
-         ],
-         "Sort Options": [
-            ""
-         ],
-         "The first option in the list is the active one.": [
-            ""
-         ],
-         "Add sorting options to your portfolio.": [
+         "Previous page link": [
             ""
          ],
          "Wide 16:9": [
@@ -1800,31 +1680,34 @@
          "block title\u0004Visual Portfolio": [
             ""
          ],
-         "block title\u0004Filter Item (Experimental)": [
+         "block title\u0004Filter by Category Item (Experimental)": [
             ""
          ],
-         "block title\u0004Portfolio Filter (Experimental)": [
+         "block title\u0004Filter by Category (Experimental)": [
             ""
          ],
          "block title\u0004Gallery Loop (Experimental)": [
             ""
          ],
-         "block title\u0004Pagination Infinite (Experimental)": [
+         "block title\u0004Infinite": [
             ""
          ],
-         "block title\u0004Pagination Load More (Experimental)": [
+         "block title\u0004Load More": [
             ""
          ],
-         "block title\u0004Pagination Next (Experimental)": [
+         "block title\u0004Next": [
             ""
          ],
-         "block title\u0004Pagination Numbers (Experimental)": [
+         "block title\u0004Numbers": [
             ""
          ],
-         "block title\u0004Pagination Previous (Experimental)": [
+         "block title\u0004Previous": [
             ""
          ],
-         "block title\u0004Paged Pagination (Experimental)": [
+         "block title\u0004Pagination Wrapper (Experimental)": [
+            ""
+         ],
+         "block title\u0004Sort (Experimental)": [
             ""
          ],
          "block title\u0004Visual Portfolio Editor": [
@@ -1839,28 +1722,31 @@
          "block description\u0004Displays individual filter item. Block is experimental and will change in future releases. Please use with caution.": [
             ""
          ],
-         "block description\u0004Displays filter buttons for the gallery loop. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays category filter buttons for the gallery loop. Block is experimental and will change in future releases. Please use with caution.": [
             ""
          ],
          "block description\u0004Display gallery loop. Block is experimental and will change in future releases. Please use with caution.": [
             ""
          ],
-         "block description\u0004Displays infinite scroll pagination for Visual Portfolio loop. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays a infinite scroll trigger for pagination.": [
             ""
          ],
-         "block description\u0004Displays a load more button for pagination. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays a load more button for pagination.": [
             ""
          ],
-         "block description\u0004Displays the next page link. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays the next page link.": [
             ""
          ],
-         "block description\u0004Displays page numbers for navigation. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays page numbers for pagination.": [
             ""
          ],
-         "block description\u0004Displays the previous page link. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays the previous page link.": [
             ""
          ],
-         "block description\u0004Displays paged pagination for Visual Portfolio loop. Block is experimental and will change in future releases. Please use with caution.": [
+         "block description\u0004Displays pagination wrapper which can include paged, load more and infinite scroll pagination. Block is experimental and will change in future releases. Please use with caution.": [
+            ""
+         ],
+         "block description\u0004Displays sort options for Gallery Loop. Block is experimental and will change in future releases. Please use with caution.": [
             ""
          ],
          "block description\u0004Edit saved Visual Portfolio layouts.": [
@@ -1890,16 +1776,7 @@
          "block keyword\u0004query": [
             ""
          ],
-         "block style label\u0004Minimal": [
-            ""
-         ],
          "block style label\u0004Fill": [
-            ""
-         ],
-         "block style label\u0004Outline": [
-            ""
-         ],
-         "block style label\u0004Classic": [
             ""
          ]
       }
